src/css/custom.css
/* ... */
.new-guide {
  padding-left: 15px;
  font-size: 0.9em;
  font-weight: 400;
}

.landing-card-section {
  padding-top: 1.25em;
}
.landing-card-section h2 {
  margin-bottom: 0.4rem;
}

.landing-card-p {
  font-family: "Aeonik";
  font-size: 1rem;
  font-weight: 400;
  margin-bottom: 1.5rem;
  letter-spacing: 1px;
}

.code-logo-list {
  margin-bottom: 0;
}

.header-link {
  text-decoration: none;
}
.bold {
  font-weight: 500;
}

.menu__link {
  font-family: "Aeonik";
}

.badge-purple {
  font-family: "Poppins";
  font-weight: 500;
  font-size: 0.75rem;
  color: #6d28d9;
  background-color: #ede9fe;
  border-radius: 0.125rem;
  padding: 0 0.5rem;
  width: fit-content;
}

.badge-blue {
  font-family: "Poppins";
  font-weight: 500;
  font-size: 0.75rem;
  color: #1d4ed8;
  background-color: #dbeafe;
  border-radius: 0.125rem;
  padding: 0 0.5rem;
  width: fit-content;
}

.badge-header {
  flex-direction: column;
  display: flex;
}

@media (min-width: 640px) {
  .badge-header {
    align-items: center;
    flex-direction: row;
  }

  .badge-purple {
    margin: 0rem 1rem 0rem 0rem;
  }

  .badge-blue {
    margin: 2.5rem 1rem 0rem 1rem;
  }
}

@media (min-width: 710px) {
  .badge-purple {
    margin: 2.5rem 1rem 0rem 1rem;
  }
}

.aside {
  color: #2563eb;
  background-color: #eff6ff;
  border-width: 1px;
  border-radius: 0.5rem;
  border-color: #2563eb;
  border-style: solid;
  padding: 1.2rem 1.25rem 0.25rem 1.25rem;
  font-family: "Aeonik";
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 1px;
}

@media only screen and (min-width: 640px) {
  .aside {
    width: 36rem;
  }
}

@media only screen and (max-width: 639px) {
  .aside {
    width: 20rem;
  }
}

.aside-svg {
  display: flex;
  margin-right: 0.5rem;
}

.aside-head {
  font-size: 0.875rem;
  margin-top: 0.25rem;
}

.aside-link {
  color: #2563eb;
}
/* Leadership page css */

.main-subhead {
  font-size: 24px;
  position: relative;
  top: -1.05%;
}

.leadership-container {
  max-width: 800px;
  margin: auto;
  padding: 15px;
  text-align: center;
}
.leadership-name {
  font-size: 1.2em;
  font-weight: 500;
}
.leadership-image {
  max-width: 150px;
}
.leadership-list {
  list-style-type: none;
}
.leadership-list-item {
  margin-top: 15px;
  padding-top: 15px;
  padding-bottom: 15px;
}
.menu__link,
.navbar__link,
.dropdown__link {
  font-weight: 400;
}
.menu__link,
.navbar__link,
.dropdown__link,
.table-of-contents__link {
  text-decoration: none;
}

.DocSearch-Hit-title,
.DocSearch-Hit-icon,
.DocSearch-Hit-action {
  --docsearch-hit-active-color: black;
}

.announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module {
  --docusaurus-announcement-bar-height: 4rem;
  font-size: 24px;
  font-weight: bold;
}

.close {
  color: #ffffff;
}

